@startuml
skinparam classAttributeIconSize 0

title Diagrama de clases - Agente PETE

abstract class IDataStorage {
  +virtual ~IDataStorage()
  +initialize() : bool
  +saveUserProfile(profile : UserProfile) : bool
  +loadUserProfile() : UserProfile
  +saveConversation(prompt : QString, response : QString) : bool
  +loadHistory() : QJsonArray
}

class UserProfile {
  -userName : QString
  -preferredModel : QString
  +UserProfile()
  +getUserName() : QString
  +getPreferredModel() : QString
  +setUserName(name : QString) : void
  +setPreferredModel(model : QString) : void
  +toJson() : QJsonObject
  +fromJson(obj : QJsonObject) : UserProfile
}

class PersistenceManager {
  +PersistenceManager()
  +initialize() : bool
  +saveUserProfile(profile : UserProfile) : bool
  +loadUserProfile() : UserProfile
  +saveConversation(prompt : QString, response : QString) : bool
  +saveConversation(prompt : QString) : bool
  +loadHistory() : QJsonArray
  -dataFolder() : QString
  -profileFile() : QString
  -historyFile() : QString
}

IDataStorage <|-- PersistenceManager
PersistenceManager ..> UserProfile : usa

@enduml
